--- a/src/app/features/admin-layout/kiosk-management/kiosk-management.component.html
+++ b/src/app/features/admin-layout/kiosk-management/kiosk-management.component.html
@@ -66,7 +66,7 @@
                 </div>
                 <div *ngIf="kiosk.status == 'online'"></div>
                 <button (click)="selectKiosk(kiosk);openDialog('maintenance')" class="rounded-lg px-10 py-1 text-white {{statusMap[kiosk.status!]}}">
-                  {{kiosk.status != 'maintenance'? 'Available':'Maintenance'}}
+                  {{kiosk.status == 'online'? 'In Use': kiosk.status != 'maintenance'? 'Available':'Maintenance'}}
                 </button>
               </div>
             </div>
