--- a/src/app/features/desk-attendant-layout/da-terminalmgmt/da-terminalmgmt.component.html
+++ b/src/app/features/desk-attendant-layout/da-terminalmgmt/da-terminalmgmt.component.html
@@ -38,7 +38,7 @@
                 <div class="w-full flex justify-end">
 
                   <button  class="rounded-lg px-10 py-1 text-white {{statusMap[terminal.status]}}">
-                    {{terminal.status == 'online' ? 'Online': terminal.status != 'maintenance'? 'Available':'Maintenance'}}
+                    {{terminal.status == 'online' ? 'In Use': terminal.status != 'maintenance'? 'Available':'Maintenance'}}
                   </button>
                 </div>
               </div>
