--- a/src/app/shared/snackbar/snackbar.component.html
+++ b/src/app/shared/snackbar/snackbar.component.html
@@ -1,7 +1,7 @@
 <div
  class="absolute bottom-4 right-4 z-50 flex flex-col gap-4 ">
     <ng-container *ngFor="let feedback of getFeedbacks(); let i = index;" >
-        <div  class="animate-pop flex items-center gap-10 justify-between bg-white rounded-xl  w-auto shadow-md border-2 border-solid {{borderColorMap[feedback.type]}} h-auto py-2 pl-4 pr-4">
+        <div  class="animate-pop flex items-center gap-10 justify-between min-w-96 bg-white rounded-xl  w-auto shadow-md border-2 border-solid {{borderColorMap[feedback.type]}} h-auto py-2 pl-4 pr-4">
             <div class="flex gap-4 items-center">
                 <div class="w-14 h-14 flex items-center">
                     <app-lottie-animation animation="{{lottieMap[feedback.type]}}" [loop]="false"></app-lottie-animation>
