youtubue live preview

--- a/src/app/features/admin-layout/content-management/content-management.component.html
+++ b/src/app/features/admin-layout/content-management/content-management.component.html
@@ -310,7 +310,7 @@
                     [showWeather]="toggles.weather" 
                     [showCurrency]="toggles.currency" 
                     [announcements]="inputFields.announcements" 
-                    [videoUrl]="inputFields.videoUrl"
+                    [videoUrl]="!toggles.videoURL ? inputFields.videoUrl : inputFields.youtubeURL"
                     [backgroundUrl]="inputFields.backgroundUrl"
                     [logoUrl]="inputFields.logoUrl"
                     [colors]="colors" 
