--- a/src/app/features/auth/login-layout/login-layout.component.html
+++ b/src/app/features/auth/login-layout/login-layout.component.html
@@ -104,7 +104,7 @@
                 </div>
 
                 <div class="flex items-center space-x-2 text-lg text-neutral-700">
-                  <input type="checkbox" id="remember"
+                  <input [(ngModel)]="rememberMe" type="checkbox" id="remember"
                          class="w-5 h-5 text-green-600 transition duration-200 rounded border-zinc-300 focus:ring-green-500" />
                   <label for="remember" class="select-none">Remember me</label>
                 </div>
