--- a/src/app/features/auth/login-layout/login-layout.component.html
+++ b/src/app/features/auth/login-layout/login-layout.component.html
@@ -1,15 +1,19 @@
 <section class="relative flex flex-col items-start min-h-screen overflow-hidden bg-lime-900">
   <!-- Background Image that remains fixed -->
-  <img loading="lazy"
-       src="https://cdn.builder.io/api/v1/image/assets/TEMP/2cba961d66b8f4ac84a7ea33550174a78410d2d66f219587d45cabb6030b81fa?placeholderIfAbsent=true&apiKey=f35c25b17acb406083beeda46a28c843"
-       class="fixed inset-0 object-cover w-full h-full"
-       alt="Background image of the queueing management system" />
+
+  <img
+      loading="lazy"
+      src="https://cdn.builder.io/api/v1/image/assets/TEMP/2cba961d66b8f4ac84a7ea33550174a78410d2d66f219587d45cabb6030b81fa?placeholderIfAbsent=true&apiKey=f35c25b17acb406083beeda46a28c843"
+      class="fixed inset-0 object-cover w-full h-full"
+      alt="Background image of the queueing management system" />
+
 
   <!-- Dark overlay with opacity adjustment -->
   <div class="fixed inset-0 bg-black bg-opacity-40"></div>
 
   <!-- Decorative SVG Shape on the right that stays fixed -->
-  <svg class="fixed right-0 top-0 w-[500px] h-full max-md:w-[300px]"
+  <svg 
+        class="fixed right-0 top-0 w-[500px] h-full max-md:w-[300px]"
        xmlns="http://www.w3.org/2000/svg"
        viewBox="0 0 100 150"
        preserveAspectRatio="none">
@@ -17,7 +21,9 @@
   </svg>
 
   <!-- Bottom-right image that stays fixed -->
-  <img loading="lazy"
+  <img
+  
+  loading="lazy"
   src="./assets/login/statue.png"
   class="fixed bottom-0 right-0 object-cover w-[555px] h-auto max-md:w-[200px] max-md:h-[200px]"
   alt="Statue Image" />
@@ -49,21 +55,30 @@
             </p>
             <address class="flex items-start gap-4 mt-6 text-lg max-md:mt-4">
               <div class="flex gap-2">
-                <img loading="lazy"
+                <img 
+                    (click)="openExternalLink('https://www.vsu.edu.ph')"
+                    loading="lazy"
                      src="https://cdn.builder.io/api/v1/image/assets/TEMP/31fd4b9ea34a63e228f8fb604a3f1d884d27b4160be7793af8d53e0b65722f39?placeholderIfAbsent=true&apiKey=f35c25b17acb406083beeda46a28c843"
-                     class="object-contain w-[40px] aspect-square"
+                     class="cursor-pointer object-contain w-[40px] aspect-square"
                      alt="Social media icon 1" />
-                <img loading="lazy"
+                <img 
+                    (click)="openExternalLink('https://www.facebook.com/visayasstateu/')"
+                    loading="lazy"
                      src="https://cdn.builder.io/api/v1/image/assets/TEMP/f9b5f4d23117931c46243310db6d001dd0cee5d96cc7fa3c2b2dac839e06a4e6?placeholderIfAbsent=true&apiKey=f35c25b17acb406083beeda46a28c843"
-                     class="object-contain w-[35px] aspect-square"
+                     class="cursor-pointer object-contain w-[35px] aspect-square"
                      alt="Social media icon 2" />
               </div>
               <div class="flex items-center gap-2 text-base font-medium text-white">
-                <img loading="lazy"
+                <img 
+                    (click)="openExternalMap()"
+                    loading="lazy"
                      src="https://cdn.builder.io/api/v1/image/assets/TEMP/0c78319bb686a1aa34bb1c1e9338e1d06a351a9b327ddf5c26cc06e7ee034993?placeholderIfAbsent=true&apiKey=f35c25b17acb406083beeda46a28c843"
-                     class="object-contain w-[25px] aspect-[0.72]"
+                     class="cursor-pointer object-contain w-[25px] aspect-[0.72]"
                      alt="Location pin icon" />
-                <span>Visca, Baybay City, Leyte</span>
+                <span
+                (click)="openExternalMap()"
+                class="cursor-pointer"
+                >Visca, Baybay City, Leyte</span>
               </div>
             </address>
           </div>
@@ -72,9 +87,9 @@
         <div class="relative z-10 flex flex-col w-6/12 h-full mr-20 max-md:w-full">
           <div class="relative flex flex-col items-center justify-center h-full pt-16 pb-16 ml-12 grow max-md:ml-0">
             <!-- Login Form -->
-            <div class="flex relative flex-col px-9 py-12 bg-white rounded-3xl shadow-lg w-[400px] max-md:px-4 max-md:w-[90%]">
-              <form class="flex flex-col w-full max-w-[350px] space-y-6">
-                <h3 class="text-2xl font-semibold text-neutral-800">
+            <div class="flex relative flex-col px-9 py-12 bg-white rounded-3xl shadow-lg w-[400px] 2xl:w-[500px] max-md:px-4 max-md:w-[90%]">
+              <form class="flex flex-col w-full 2xl:space-y-8 space-y-6">
+                <h3 class="text-2xl 2xl:text-3xl font-medium text-neutral-800 text-center">
                   Account Log in
                 </h3>
 
@@ -111,7 +126,7 @@
 
                 <div 
                   (click)="login()"
-                        class="w-full py-3 text-lg font-bold flex justify-center text-white transition duration-200 bg-green-700 rounded-lg shadow-md hover:bg-green-600">
+                        class="w-full py-3 cursor-pointer text-lg font-bold flex justify-center text-white transition duration-200 bg-green-700 rounded-lg shadow-md hover:bg-green-600">
                   LOG IN
               </div>
 
