--- a/src/app/features/admin-layout/kiosk-management/modals/create-kiosk/create-kiosk.component.html
+++ b/src/app/features/admin-layout/kiosk-management/modals/create-kiosk/create-kiosk.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="absolute inset-0 w-full h-full flex items-center justify-center animate-pop z-50">
-    <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md p-10 space-y-8">
+    <div class="bg-white rounded-3xl shadow-2xl w-full max-w-sm p-8 space-y-8">
 
       <!-- Modal Header -->
       <div class="flex items-center justify-between">
@@ -42,4 +42,4 @@
       </form>
     </div>
   </div>
-  
+  <audio [volume]="0.4"  [src]="'assets/audio/pop-notif.wav'" autoplay></audio>
