--- a/src/app/features/admin-layout/user-management/create-account-modal/create-account-modal.component.html
+++ b/src/app/features/admin-layout/user-management/create-account-modal/create-account-modal.component.html
@@ -1,5 +1,5 @@
 <div class="fixed inset-0 bg-gray-800 bg-opacity-75 flex items-center justify-center z-50">
-  <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md p-10 space-y-8">
+  <div class="bg-white rounded-3xl shadow-2xl w-full max-w-md p-8 space-y-8">
     
     <!-- Modal Header -->
     <div class="flex items-center justify-between">
@@ -98,3 +98,4 @@
     </form>
   </div>
 </div>
+<audio [volume]="0.4"  [src]="'assets/audio/pop-notif.wav'" autoplay></audio>
