--- a/src/app/shared/modals/confirmation/confirmation.component.html
+++ b/src/app/shared/modals/confirmation/confirmation.component.html
@@ -2,7 +2,7 @@
 </div>
 
 <div class="absolute inset-0 w-full h-full flex items-center justify-center animate-pop z-50">
-    <div class="  h-auto bg-white rounded-2xl shadow-2xl w-full max-w-md pt-4 px-4 pb-6 gap-3  flex flex-col">
+    <div class="  h-auto bg-white rounded-3xl shadow-2xl w-full max-w-sm justify-center px-4 pb-6 gap-3  flex flex-col">
         <div class="flex-1 justify-center items-center">
 
             <!-- Revert or Publish Modal -->
