--- a/src/app/features/admin-layout/terminal-management/terminal-management.component.html
+++ b/src/app/features/admin-layout/terminal-management/terminal-management.component.html
@@ -29,15 +29,15 @@
       <div class=" grid grid-cols-3 px-3 py-3 gap-3"> 
         <button 
         *ngFor="let terminal of terminals; let i = index" 
-        class="group  {{terminal.status == 'maintenance' ? 'bg-yellow-50 border-yellow-500' :'bg-white hover:bg-green-900 hover:text-white hover:border-green-500 '}} h-48 p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-solid border-black/10 ">
+        class="group transition-all hover:scale-110  {{terminal.status == 'maintenance' ? 'bg-yellow-50 border-yellow-500' :'bg-white hover:bg-green-900 hover:text-white hover:border-green-500 '}} h-48 p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-solid border-black/10 ">
 
           <!-- Header -->
           <div class="flex gap-4 items-center">
             <!-- Lottie Container -->
-            <div class="w-16 h-12 p-2 rounded-lg bg-green-200 group-hover:bg-yellow-200">
+            <div class="transition-all w-16 h-12 p-2 rounded-lg bg-green-200 group-hover:bg-yellow-200">
               <app-lottie-animation animation="computer"></app-lottie-animation>
             </div>
-            <div class="w-5 h-5 rounded-full {{statusMap[terminal.status]}} bottom-4 right-4"></div>
+            <div transition-all class="w-5 h-5 rounded-full {{statusMap[terminal.status]}} bottom-4 right-4"></div>
             <div class="font-medium  tracking-wide text-xl flex items-center gap-2">
               TERMINAL <span class="font-medium text-4xl">{{i+1}}</span>
             </div>
