--- a/src/app/features/kiosk-layout/kiosk-forms/kiosk-forms.component.css
+++ b/src/app/features/kiosk-layout/kiosk-forms/kiosk-forms.component.css
@@ -1,56 +1,68 @@
-/* Custom button styles */
-.btn-custom {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    transition: background-color 0.3s ease;
-  }
-  
-  .btn-custom:hover {
-    background-color: #2f855a; /* Darker green for hover */
-  }
-  
-  .btn-assistance {
-    background-color: transparent;
-    border: none;
-    outline: none;
-    cursor: pointer;
-  }
-  
-  /* Additional styling */
-  h1 {
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-  
-  h2 {
-    font-size: 1.25rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-  }
-  
-  ul {
-    margin-top: 1rem;
-  }
-  
-  :host {
-  display: contents;
-
-  /* Modal fade-in animation */
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: scale(0.9);
-  }
-  to {
-    opacity: 1;
-    transform: scale(1);
-  }
+.registrar-title {
+  font-size: 40px;
+  font-weight: 1000;
+  color: #166534; /* text-green-800 */
+}
+.form-title {
+  font-size: 40px;
+  font-weight: 450;
+  color: #166534; /* text-green-800 */
+  margin-bottom: 24px;
+}
+.priority-button,
+.regular-button {
+  width: 200px;
+  height: 200px;
+  font-size: 24px;
+  font-weight: 500;
+}
+.button-icon {
+  width: 120px;
+  height: 120px;
+  margin-bottom: 12px;
 }
 
-.modal-container {
-  animation: fadeIn 0.3s ease-out;
+.form-checkbox {
+  width: 16px;
+  height: 16px;
 }
 
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.border {
+  border: 1px solid #d1d5db; /* Tailwind's gray-300 */
+}
+
+.rounded-md {
+  border-radius: 0.375rem; /* Tailwind's rounded-md */
+}
+
+.shadow-lg {
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
+}
+
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
+.max-h-48 {
+  max-height: 12rem; /* Tailwind's max-h-48 */
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.p-2 {
+  padding: 0.5rem; /* Tailwind's p-2 */
+}
+
+.ml-2 {
+  margin-left: 0.5rem; /* Tailwind's ml-2 */
 }
