--- a/src/app/features/admin-layout/user-management/user-management.component.html
+++ b/src/app/features/admin-layout/user-management/user-management.component.html
@@ -101,7 +101,7 @@
 
       <tr (click)="viewUserDetails(user)" *ngFor="let user of filteredUsers; let even = even" 
           [ngClass]="{'bg-gray-50': even}"
-          class="hover:bg-green-300 hover:text-white transition-colors duration-200">
+          class="hover:bg-green-300 hover:text-gray-800 transition-colors duration-200">
          
         <td class="p-3 text-sm">{{ user.username }}</td>
         <td class="p-3 text-sm">{{ user.fullname }}</td>
