--- a/src/app/features/admin-layout/department-management/department-management.component.html
+++ b/src/app/features/admin-layout/department-management/department-management.component.html
@@ -5,7 +5,7 @@
     <div class="w-full py-4 px-6 my-4 flex justify-between rounded-lg bg-white shadow-md">
       <div>
         <h1 class="font-medium text-2xl  tracking-wide">Department Management</h1>
-        <p class="font-thin " >Manage department for clients. Create, edit, delete and view statuses of each department in this section.</p>
+        <p class="font-thin " >Manage department for client input. Create, edit, delete and view statuses of each department in this section.</p>
       </div>
       <div class="w-16 h-16">
         <app-lottie-animation [loop]="false" animation="confirmation"></app-lottie-animation>
@@ -25,7 +25,7 @@
             <div class="flex gap-4 items-center">
               <!-- Lottie Container -->
               <div class="w-16 h-12 p-2 rounded-lg bg-green-200 transition-all group-hover:bg-yellow-200">
-                <app-lottie-animation animation="document"></app-lottie-animation>
+                <app-lottie-animation animation="building"></app-lottie-animation>
               </div>
               <div class="font-medium  tracking-wide text-xl flex items-center gap-2">
                 DEPARTMENT <span class="font-medium text-4xl">{{i+1}}</span>
