--- a/src/app/features/admin-layout/service-management/service-management.component.html
+++ b/src/app/features/admin-layout/service-management/service-management.component.html
@@ -5,7 +5,7 @@
     <div class="w-full py-4 px-6 my-4 flex justify-between rounded-lg bg-white shadow-md">
       <div>
         <h1 class="font-medium text-2xl  tracking-wide">Service Management</h1>
-        <p class="font-thin " >Manage service for clients. Create, edit, delete and view statuses of each service in this section.</p>
+        <p class="font-thin " >Manage services for clients. Create, edit, delete and view statuses of each service in this section.</p>
       </div>
       <div class="w-16 h-16">
         <app-lottie-animation [loop]="false" animation="confirmation"></app-lottie-animation>
