admin department dashboard overview

--- a/src/app/features/kiosk-layout/kiosk-forms/kiosk-forms.component.html
+++ b/src/app/features/kiosk-layout/kiosk-forms/kiosk-forms.component.html
@@ -3,7 +3,7 @@
   <header class="relative flex flex-col items-center w-full px-4 py-3 overflow-hidden bg-white rounded-lg shadow-md sm:px-6 sm:py-4">
     <div class="z-10 flex items-center justify-between w-full max-w-full">
       <div class="flex items-center">
-        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/d5d40612e598a7197ff912181c7a8c92a917b0af79969c52d8bc1f64c6ead623?apiKey=f35c25b17acb406083beeda46a28c843" alt="Registrar logo" class="w-16 h-16 rounded-full shadow-lg sm:w-[80px] sm:h-[80px]">
+        <img src="./assets/logo/vsu.png" alt="Registrar logo" class="w-16 h-16 rounded-full shadow-lg sm:w-[80px] sm:h-[80px]">
       </div>
     </div>
     <div class="absolute top-0 left-0 w-full h-full rounded-lg">
