--- a/src/app/features/kiosk-layout/kiosk-forms/kiosk-forms.component.html
+++ b/src/app/features/kiosk-layout/kiosk-forms/kiosk-forms.component.html
@@ -68,7 +68,7 @@
                     class="w-full px-3 py-2 text-sm bg-white border border-gray-300 rounded-md cursor-pointer"
                     (click)="toggleDropdown()"
                   >
-                    <span *ngIf="selectedServices.length === 0">Select Services</span>
+                    <span *ngIf="selectedServices.length === 0">Select services</span>
                     <span *ngIf="selectedServices.length > 0">{{ showServiceNames()}}</span>
                     <i class="ml-2 fas fa-caret-down"></i>
                   </div>
